deployment as package; now installable via pip

--- a/notebooks/prime_cycle_counting.ipynb
+++ b/notebooks/prime_cycle_counting.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5376c8df",
    "metadata": {},
    "outputs": [
@@ -144,12 +144,14 @@
       "For 5-cycles: (N initial states, N results, N primes)=(243, 48, 48); if correct then N results == N primes\n",
       "For 6-cycles: (N initial states, N results, N primes)=(729, 116, 116); if correct then N results == N primes\n",
       "For 7-cycles: (N initial states, N results, N primes)=(2187, 312, 312); if correct then N results == N primes\n",
-      "For 8-cycles: (N initial states, N results, N primes)=(6561, 810, 810); if correct then N results == N primes\n"
+      "For 8-cycles: (N initial states, N results, N primes)=(6561, 810, 810); if correct then N results == N primes\n",
+      "For 9-cycles: (N initial states, N results, N primes)=(19683, 2184, 2184); if correct then N results == N primes\n",
+      "It tooks 152.65200066566467 seconds to compute all prime cycles up to length 9 with 3 symbols\n"
      ]
     }
    ],
    "source": [
-    "\n",
+    "n, k = 9, 3\n",
     "t0 = time.time_ns()/10**9\n",
     "cycles = prime_cycles(n, k)\n",
     "t1 = time.time_ns()/10**9\n",
