--- a/notebooks/primefinder.ipynb
+++ b/notebooks/primefinder.ipynb
@@ -11,7 +11,7 @@
     "    x = A[len(A) - 1]\n",
     "    for i in range(len(A) - 1, 0, -1):\n",
     "        A[i] = A[i - 1];\n",
-    "        A[0] = x;\n",
+    "    A[0] = x;\n",
     "    return A\n",
     "\n",
     "\n",
@@ -23,7 +23,7 @@
     "    \"\"\"\n",
     "    return ', '.join(map(str, A)) in ', '.join(map(str, B)) \n",
     "\n",
-    "def primeOrbits(initial_conditions, check_neg, check_rev): \n",
+    "def primeOrbits(initial_conditions, check_neg=False, check_rev=False): \n",
     "    #initial conditions should be you entire list of possible shadow state configurations\n",
     "    #check_neg is a value that takes either 1 or 0 where if it is 1, it will check for phi to negative phi symmetry\n",
     "    initial_conditions[initial_conditions == 1] = 3\n",
