clean up and 0.0.3

--- a/notebooks/proof_of_concept_phik.ipynb
+++ b/notebooks/proof_of_concept_phik.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b87d4c76",
+   "metadata": {},
+   "source": [
+    "# Use the phik.ipynb instead unless you want these standalone functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "cd68cf23",
