--- a/notebooks/phik.ipynb
+++ b/notebooks/phik.ipynb
@@ -24,22 +24,57 @@
    "source": [
     "# PhiK Class\n",
     "\n",
-    "Most relevant methods are `generate_states`, `prime_cycles` and `hunt`.\n",
-    "(I need to change from cycles to cycles oops..)\n",
+    "Class instantiation expects $n$, $k$, and $\\mu^2$.\n",
     "\n",
-    "Class instantiation expects $n$, $k$, and $\\mu^2$."
+    "k is now reflective of the actual k in the equation name; previously it was the exponent in the E-L equations\n",
+    "Phi-4 is now $k=4$ as it should be"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "12f16b72",
+   "id": "134323c5",
    "metadata": {},
    "outputs": [],
    "source": [
     "n = 3\n",
-    "k = 3\n",
-    "musqr = 5\n",
+    "k = 4\n",
+    "musqr = 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab9739b9",
+   "metadata": {},
+   "source": [
+    "Descriptions/the documentation can be read for any function by typing '?' after the function/method/class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "adbe0b76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PhiK?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfd99d1e",
+   "metadata": {},
+   "source": [
+    "Relevant attributes are `n`, `k`, `musqr`, `states`, `basis`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "12f16b72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "x = PhiK(n, k, musqr)"
    ]
   },
@@ -48,40 +83,32 @@
    "id": "99ac66eb",
    "metadata": {},
    "source": [
-    "Relevant attributes are `n`, `k`, `musqr`, `states`. The `states` are empty until we populate them via `generate_states`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "ca4a7980",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'NoneType'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(type(x.states))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "2ed8fe52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = x.generate_states(prime=False)"
+    "The `states` are empty until we populate them via `generate_states`; Here is how you can populate the instance with all possible cycles"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "5c15726a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.generate_states?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2ed8fe52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = x.generate_states()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "bf791909",
    "metadata": {},
    "outputs": [
@@ -89,12 +116,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'numpy.ndarray'>\n"
+      "<class 'numpy.ndarray'> (27, 3)\n"
      ]
     }
    ],
    "source": [
-    "print(type(x.states))"
+    "print(type(x.states), x.states.shape)"
    ]
   },
   {
@@ -107,75 +134,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "e9a9e291",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x.states = x.prime_cycles()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "b7574af2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-1, -1,  0],\n",
-       "       [-1, -1,  1],\n",
-       "       [ 0, -1,  0],\n",
-       "       [ 0, -1,  1],\n",
-       "       [ 1, -1,  0],\n",
-       "       [ 1, -1,  1],\n",
-       "       [ 0,  0,  1],\n",
-       "       [ 1,  0,  1]])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x.states"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c6949081",
-   "metadata": {},
-   "source": [
-    "The numerical optimization routine is built into the class as opposed to be a separate module like it is in `orbithunter`;\n",
-    "this package's sister package."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "6c31e45b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "converged_states = x.hunt()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "91630437",
-   "metadata": {},
-   "source": [
-    "Before after comparison"
+    "x = x.prime_cycles()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6d217c9d",
+   "id": "b7574af2",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 8 states after quotienting repeats and cyclic permutations\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -195,13 +174,69 @@
     }
    ],
    "source": [
-    "x.states "
+    "print(f'There are {x.states.shape[0]} states after quotienting repeats and cyclic permutations')\n",
+    "x.states"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6949081",
+   "metadata": {},
+   "source": [
+    "The numerical optimization routine is built into the class as opposed to be a separate module like it is in `orbithunter`;\n",
+    "this package's sister package."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "34e41a94",
+   "id": "6c31e45b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_converged = x.hunt()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91630437",
+   "metadata": {},
+   "source": [
+    "Before after comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6d217c9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1, -1,  0],\n",
+       "       [-1, -1,  1],\n",
+       "       [ 0, -1,  0],\n",
+       "       [ 0, -1,  1],\n",
+       "       [ 1, -1,  0],\n",
+       "       [ 1, -1,  1],\n",
+       "       [ 0,  0,  1],\n",
+       "       [ 1,  0,  1]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.states "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "13e6b328",
    "metadata": {},
    "outputs": [
     {
@@ -217,13 +252,13 @@
        "       [ 1.06677926,  0.33060463,  1.06677926]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "converged_states"
+    "x_converged.states "
    ]
   },
   {
@@ -236,16 +271,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "b2e471df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x.states = converged_states"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "1b36c740",
    "metadata": {},
@@ -255,64 +280,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "66000293",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1.1815044184388797e-10"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The original cost function value for all cycles was 53.99999999999999\n",
+      "After running the optimization routine via the hunt function, it is 1.1815044184388797e-10\n"
+     ]
     }
    ],
    "source": [
-    "x.cost()"
+    "print(f'The original cost function value for all cycles was {x.cost()}')\n",
+    "print(f'After running the optimization routine via the hunt function, it is {x_converged.cost()}')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c6da4085",
-   "metadata": {},
-   "source": [
-    "Because it is the squared loss, we can expect the tolerance of each individual site in"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "59f6daa0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-1.03063594e-06, -1.03063594e-06,  5.52687077e-07],\n",
-       "       [ 1.45450969e-06,  1.45450969e-06,  1.00265457e-05],\n",
-       "       [-7.90793613e-08, -1.62385988e-06, -7.90793613e-08],\n",
-       "       [ 0.00000000e+00, -2.03817493e-06,  2.03817493e-06],\n",
-       "       [ 2.03817493e-06, -2.03817493e-06,  0.00000000e+00],\n",
-       "       [-1.45450969e-06, -1.00265457e-05, -1.45450969e-06],\n",
-       "       [ 7.90793613e-08,  7.90793613e-08,  1.62385988e-06],\n",
-       "       [ 1.03063594e-06, -5.52687077e-07,  1.03063594e-06]])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x.eqn()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9a483f15",
+   "id": "6a939202",
    "metadata": {},
    "source": [
     "Cost functional `1/2 F^2` is a scalar valued function; therefore the gradient is a vector, not a matrix."
@@ -321,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "de1e3adc",
+   "id": "812b030e",
    "metadata": {},
    "outputs": [
     {
@@ -341,34 +329,48 @@
     }
    ],
    "source": [
-    "x.costgrad()"
+    "x_converged.costgrad()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6da4085",
+   "metadata": {},
+   "source": [
+    "Because it is the squared loss, we can expect the residual of each individual site to be on the order of the square root of the residual. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6a664134",
+   "id": "59f6daa0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.03063594e-06, -1.03063594e-06,  5.52687077e-07],\n",
+       "       [ 1.45450969e-06,  1.45450969e-06,  1.00265457e-05],\n",
+       "       [-7.90793613e-08, -1.62385988e-06, -7.90793613e-08],\n",
+       "       [ 0.00000000e+00, -2.03817493e-06,  2.03817493e-06],\n",
+       "       [ 2.03817493e-06, -2.03817493e-06,  0.00000000e+00],\n",
+       "       [-1.45450969e-06, -1.00265457e-05, -1.45450969e-06],\n",
+       "       [ 7.90793613e-08,  7.90793613e-08,  1.62385988e-06],\n",
+       "       [ 1.03063594e-06, -5.52687077e-07,  1.03063594e-06]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "x = PhiK(n, k, musqr).generate_states(prime=False)\n",
-    "# this removes repeats and cyclic rotations, but not the other symmetries. \n",
-    "x.states = x.prime_cycles(check_neg=False, check_rev=False)"
+    "x_converged.eqn()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3c6916ac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "converged_cycles = x.hunt()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
    "id": "e2e43cd1",
    "metadata": {},
    "outputs": [
@@ -395,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "41c5f677",
    "metadata": {},
    "outputs": [
@@ -414,7 +416,7 @@
    ],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.scatter(converged_cycles[:, 0], converged_cycles[:, 1])\n",
+    "ax.scatter(x_converged.states[:, 0], x_converged.states[:, 1])\n",
     "ax.set_xlim([-2, 2])\n",
     "ax.set_ylim([-2, 2])\n",
     "ax.grid()"
